yoshimi 2.2.0 M

2023-6-1 Will
bn2140
* BugFix: Changed effects not highlighted.
* Corrected some window title bars.
* Part kit window and part effects window visible status
  now remembered over Yoshimi shutdown and restart.

2023-5-31 Will
bn2139
* Merged in part UI improvements from newGUIpart.

2023-5-28 Will
bn2138
* Moved master/mixer engine updates from partUI to masterUI.
* Consolidated partnew/updatepart duplicated settings.

2023-5-24 Will
bn2137
* Partially reverted last change in main.cpp.

2023-5-23 Will
bn2136
* Small refinements in Main, SynthEngine, MiscGui, LV2.

2022-5-21 Will
bn2135
* BugFix: GUI not updating key shift, key limit, portamento
  when changing part selection.

2022-5-20 Will
bn2134
* Metadata updates.

2022-5-18 Will
bn2133
* BugFix: Mixer Panel not clearing previous selected part.
* BugFix: DynFilter filter insert not keeping in scale on resizes.
* BugFix: Main window not resizing DynFilter filter text.
* Adjusted some effects control positions.

2022-5-15 Will
bn2132
* Final cleanups and adjustments.
* Commented out cmake testing definitions.
* Set release version 2.2.0

2022-5-13 Will
bn2131
* Corrected some entries in textLists.h
  Adjusted User Guide to match.
* Set release candidate 2.2.0 rc3

2022-5-11 Will
bn2130
* Changed cmake policy CMP0072 from OLD to NEW.
* Added tooltip to Edit button.

bn2129
* Applied patch from Hermann for compiling with clang.
* Changed randWalkWindow_retext() to randRtext()
* doc updates.
* Set release candidate 2.2.0 rc2

2022-5-9 Will
bn2128
* Merged in altmain with adjusted main window.
* BugFix: CLI drum mode control in wrong place.
* Suppressed compiler warning in BuildScheduler.h
* Updated docs and User guide.
* Set release candidate 2.2.0 rc1

2022-5-1 Will
bn2127
* Minor tweaks to the main window.

2022-4-30 Will
bn2126
* Included Hermans updates to the User Guide
* Minor adjustments to User Guide and various text files.

bn2125
* More additions/corrections to notes.