@@ -99,11 +99,11 @@
     <a id="edit"></a>
     <p>
     <img src="images/edit.png" alt="Part Edit Window" class="image">
-    The <em>Edit</em> button mentioned above opens this window for full access to all part editing.
+    The <em>Edit</em> button mentioned above opens this window for full access to all part <em>instrument</em> editing.
     Enabling and disabling the engines is done from here, along with access to them via the respective 'Edit' buttons.
 
     <h3>Editor controls</h3>
-    <b>Default</b> Clicking on this button will fill the copyright field with a saved entry (if it exists), while holding down <em>Ctrl</em> at the same time will save the currently contents of the field as the default.
+    <b>Default</b> Clicking on this button will fill the copyright field with a saved entry (if it exists). To store a default message, fill in the entry manually, then while holding down <em>Ctrl</em> click on this button.
     <br><br>
     <b>Author and Copyright</b> (text entry) A free text field for you to enter whatever copyright infomation you like.
     <br><br>
@@ -117,7 +117,7 @@
     <br><br>
     <b>Edit</b> (SubSynth) Opens the SubSynth editing window.
     <br><br>
-    <b>Enabled</b> (PadSynth) Makes this engine active or inactive. A first-time enabling will temporarily stop sound from that part, as the PadSynth wavetable has to be created.
+    <b>Enabled</b> (PadSynth) Makes this engine active or inactive. If the PadSynth build mode is set to 'Muted' making changes to this may cause disruption to the sound while the PadSynth wavetable is being created.
     <br><br>
     <b>Edit</b> (PadSynth) Opens the PadSynth editing window.
     <br><br>
@@ -125,11 +125,13 @@
     <br><br>
     <b>Effects</b> Opens the Effects window for editing.
     <br><br>
+    <b>Aftertouch</b> Opens the <a href="#aftertouch">Aftertouch</a> editing window.
+    <br><br>
     <b>Detune</b> (Humanise) This control enables you to set a small random detune of the entire part.
     <br><br>
     <b>Velocity</b> (Humanise) With this control you can set a random whole part attenuation.
     <br><br>
-    <b>Aftertouch</b> Opens the <a href="#aftertouch">Aftertouch</a> editing window.
+    <b>Reset</b> This button reverts the part's instrument to the default 'Simple Sound'. It doesn't change the other part level settings (at the bottom of the main window).
     </p>
     <a href="#top" class="up">Back to top</a>
     <img src="../images/boundry.png" alt="divider" class="wideline">
