@@ -1296,7 +1296,7 @@ string DataText::resolveMain(CommandBlock *getData, bool addValue)
             contstr = "Load Recent" + textMsgBuffer.fetch(value_int);
             break;
 
-        case MAIN::control::defaultPart:
+        case MAIN::control::defaultInstrument:
             showValue = false;
             contstr = "Part " + to_string(value_int + 1) + " cleared";
             break;
