@@ -3468,7 +3468,7 @@ float SynthEngine::getLimits(CommandBlock *getData)
             def = 115;
             max = 119;
             break;
-        case MAIN::control::defaultPart:
+        case MAIN::control::defaultInstrument:
             def = 0;
             max = Runtime.NumAvailableParts -1;
             break;
